[Releng] Update build.xml to Buckminster 4.5